forms  and notification component updated

--- a/src/app/components/apply/apply.component.scss
+++ b/src/app/components/apply/apply.component.scss
@@ -48,9 +48,9 @@ textarea {
 .prime{
     float: right;
     margin-top: 10px;
-    background-color: #23b9fc;
+    background-color: #70aade;
 }
 .backbutton{
-    background-color: #23b9fc;
+    background-color: #70aade;
     color: white;
 }
