--- a/src/app/components/notification/notification.component.html
+++ b/src/app/components/notification/notification.component.html
@@ -1,274 +1,197 @@
-<!-- <div class="main-div"> 
-    <!-- <div class="notification">
-        <div class="notification-inner">
-    <i class="fas fa-check check-icon mr-3"></i>
-    <div class="text ">Added a new hloliday </div>
-</div>
-</div> -->
-<!-- <div  class="apply-header">
-    <div  class="header clearfix">
-        <div class="text">
-            <h2>Notifications</h2>
-        </div>
-        <div class="button"> -->
-            <!-- <a>Clear all</a> -->
-            <!-- <a mat-flat-button clearbutton class="clearbutton">Clear all</a>
-</div>
-</div>
-</div>
 
-<div class="row"> -->
-    <!-- notification -->
-    <!-- <div class="notification">
-        <div class="notify-inner pd info"> 
-            New holiday added in Arethso Calender
-            <i class="material-icons"> close </i>
-        </div>
-    </div> -->
 
-     <!-- notification -->
-     <!-- <div class="notification">
-            <div class="notify-inner pd cancel-bg"> 
-                Coming monday holiday is canceled due to hard work
-                <i class="material-icons"> close </i>
-            </div>
-        </div> -->
+   <section class="notificationsection">
 
-         <!-- notification -->
-    <!-- <div class="notification">
-            <div class="notify-inner pd success"> 
-                Notification is successfully opened
-                <i class="material-icons"> close </i>
-            </div>
-        </div> -->
-
-         <!-- notification -->
-    <!-- <div class="notification">
-            <div class="notify-inner pd special"> 
-                No one will take leave in running month due to hard work
-                <i class="material-icons"> close </i>
-            </div>
-        </div>
-
-      </div>
-
-      
-</div>
-   -->
-        
-<section class="notificationsection">
-
-        <div  class="apply-header">
-                <div  class="header">
-                    <div class="text">
-                        <h2>Notifications</h2>
-                    </div>
-                    
-                      
-                   
-                    <div>
-                        <a href="#" class="clear">Mark all as read</a> 
-                        <a href="#" class="clear">Clear all</a> 
-                            <!-- <span>Mark </span> 
-                       <span class="clear"> Clear all</span>  -->
-                    </div>
-                    <!-- <div class="button"> 
+                <div class="apply-header">
+                    <div class="header">
+                        <div class="text">
+                            <h2>Notifications</h2>
+                        </div>
             
-                         <a mat-flat-button clearbutton class="clearbutton">Clear all</a>
-            </div> -->
-            </div>
-            </div>
-   <div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
+                        <div>
+                            <a href="#" class="clear">Mark all as read</a>
+                            <a href="#" class="clear">Clear all</a>
+                            
+                        </div>
+                        
+                    </div>
                 </div>
-               
-                
-
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
+                <div class="notread">
+            
+                    <div class="notification">
+                        <!-- <div class="notify-inner pd special">  -->
+                        <div class="person">
+                            <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                        </div>
+                        <div class="para">
+                            <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                        </div>
+            
+                        <!-- </div> -->
+                        <i class="material-icons cross"> close </i>
+            
+                    </div>
+                    <div class="second">
+                        <i class="material-icons clock">
+                            access_time
+                            </i>
+                        <p>a few seconds ago</p>
+            
+                    </div>
                 </div>
-               
-                
 
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p> a few seconds ago</p>
-
-</div>
-
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
+                <div class="read">
+                    <div class="notification ">
+                        <!-- <div class="notify-inner pd special">  -->
+                        <div class="person">
+                            <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                        </div>
+                        <div class="para">
+                            <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                        </div>
+            
+                        <!-- </div> -->
+                        <i class="material-icons cross"> close </i>
+            
+                    </div>
+                    <div class="second">
+                        <i class="material-icons clock">
+                            access_time
+                            </i>
+                        <p> a few seconds ago</p>
+            
+                    </div>
                 </div>
-               
-                
-
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
+            
+                <div class="read">
+                    <div class="notification ">
+                        <!-- <div class="notify-inner pd special">  -->
+                        <div class="person">
+                            <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                        </div>
+                        <div class="para">
+                            <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                        </div>
+            
+                        <!-- </div> -->
+                        <i class="material-icons cross"> close </i>
+            
+                    </div>
+                    <div class="second">
+                        <i class="material-icons clock">
+                            access_time
+                            </i>
+                        <p>a few seconds ago</p>
+            
+                    </div>
                 </div>
-               
-                
 
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
+                <div class="notread">
+            
+                    <div class="notification ">
+                        <!-- <div class="notify-inner pd special">  -->
+                        <div class="person">
+                            <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                        </div>
+                        <div class="para">
+                            <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                        </div>
+            
+                        <!-- </div> -->
+                        <i class="material-icons cross"> close </i>
+            
+                    </div>
+                    <div class="second">
+                        <i class="material-icons clock">
+                            access_time
+                            </i>
+                        <p>a few seconds ago</p>
+            
+                    </div>
                 </div>
-               
+            
                 
+                    <div class="read">
+                        <div class="notification ">
+                            <!-- <div class="notify-inner pd special">  -->
+                            <div class="person">
+                                <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                            </div>
+                            <div class="para">
+                                <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                            </div>
+            
+                            <!-- </div> -->
+                            <i class="material-icons cross"> close </i>
+            
+                        </div>
+                        <div class="second">
+                            <i class="material-icons clock">
+                            access_time
+                            </i>
+                            <p>a few seconds ago</p>
+            
+                        </div>
+                    </div>
 
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
-                </div>
-               
-                
-
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-
-<div class="notification ">
-        <!-- <div class="notify-inner pd special">  -->
-            <div class="person">
-                    <img  alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image"> 
-
-
-            </div>
-                <div class="para">
-                        <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
-                       
-
-                </div>
-               
-                
-
-               
-            <!-- </div> -->
-            <i class="material-icons cross"> close </i>
-
-   </div>
-   <div class="second">
-        <i class="material-icons clock">
-                access_time
-                </i>
-        <p>a few seconds ago</p>
-
-</div>
-</section>
+                    <div class="read">
+                        <div class="notification ">
+                            <!-- <div class="notify-inner pd special">  -->
+                            <div class="person">
+                                <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                            </div>
+                            <div class="para">
+                                <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                            </div>
+            
+                            <!-- </div> -->
+                            <i class="material-icons cross"> close </i>
+            
+                        </div>
+                        <div class="second">
+                            <i class="material-icons clock">
+                            access_time
+                            </i>
+                            <p>a few seconds ago</p>
+            
+                        </div>
+                    </div>
+            
+                    <div class="read">
+                        <div class="notification ">
+                            <!-- <div class="notify-inner pd special">  -->
+                            <div class="person">
+                                <img alt="profile pic" src="../../../assets/images/profile-img.jpg" class="image">
+            
+                            </div>
+                            <div class="para">
+                                <P> Smith has applied for <span> 3 days </span>leave.lorem ipsum sit amet consectetur adipisicing.</P>
+            
+                            </div>
+            
+                            <!-- </div> -->
+                            <i class="material-icons cross"> close </i>
+            
+                        </div>
+                        <div class="second">
+                            <i class="material-icons clock">
+                            access_time
+                            </i>
+                            <p>a few seconds ago</p>
+            
+                        </div>
+                    </div>
+            
+            </section>
