--- a/src/app/components/notification/notification.component.scss
+++ b/src/app/components/notification/notification.component.scss
@@ -80,10 +80,13 @@
   // margin-top: 20px;
   padding: 12px 12px 12px 22px;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   // margin-left: 11px;
   border-top: 1PX SOLID #e4e0e0;
   position: relative;
+  p{
+    margin-bottom: 0px;
+  }
   span{
     color:#1565c0;
   }
@@ -146,7 +149,7 @@
         margin-top: -21px;
         display: flex;
         align-items: center;
-        margin-bottom: 5px;
+        padding-bottom: 5px;
         p{
           margin-bottom: 0px;
         }
@@ -162,5 +165,8 @@
         margin-right: 4px;
         font-size: 18px;
         
+      }
+      .notread{
+        background-color: #ced3d8;
       }
       
