--- a/src/styles.scss
+++ b/src/styles.scss
@@ -298,13 +298,18 @@ button:focus {
 	&:hover {
 		box-shadow: 0 0 10px rgba(0,0,0,.2);
 	}
-.mat-form-field.mat-focused .mat-form-field-ripple{
-  background-color: #70aade;
+
+
+.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick{
+color: #70aade !important;
+}
+}
+.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick{
+  color: #70aade;
 }
 .mat-form-field-appearance-outline .mat-form-field-outline-thick {
   color: rgba(0,0,0,.12);
 }
-.mat-form-field-appearance-outline.mat-focused .mat-form-field-outline-thick{
-color: #70aade;
-}
+.mat-form-field.mat-focused .mat-form-field-ripple{
+  background-color: #70aade ;
 }
