--- a/src/app/components/holidays/holidays.component.html
+++ b/src/app/components/holidays/holidays.component.html
@@ -17,8 +17,8 @@
           </mat-option>
         </mat-select>
       </mat-form-field>   -->
-<div class="tab-outer">
-    <div class="table-header-main">
+
+   
     <div class="table-header">
 <div class="year-select">
   <mat-form-field appearance="outline">
@@ -30,6 +30,12 @@
     </mat-select>
   </mat-form-field>
     </div>
+    
+    </div>
+    <div class="outerbox">
+      
+      </div>
+  
 
     <!-- <div class="used-leave mr-left">
       <div class="text">
@@ -43,9 +49,9 @@
             <div class="value">7</div>
           </div>
            </div> -->
-          </div>
-        </div>
-      </div>
+         
+       
+     
     <mat-tab-group>
         <mat-tab label="History">
                 <!-- <mat-form-field>
